--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.1.3",
         "codeception/codeception": "^3.0",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "5.8.*",
+        "squizlabs/php_codesniffer": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
